# whatbytes-assignment

./: README.md  postman_collection.json  pyproject.toml  requirements.txt
accounts/: serializers.py  urls.py  views.py
accounts/management/commands/: seed_data.py
config/: settings.py  urls.py
doctors/: models.py  serializers.py  urls.py  views.py
doctors/migrations/: 0001_initial.py
mappings/: models.py  serializers.py  urls.py  views.py
mappings/migrations/: 0001_initial.py
patients/: admin.py  models.py  serializers.py  urls.py  views.py
patients/migrations/: 0001_initial.py
